<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/notificationCard"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="50dp"
    android:layout_gravity="center_vertical"
    android:layout_marginStart="8dp">

        <ImageView
            android:id="@+id/notificationImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="notification picture"
            android:src="@drawable/boy"/>
</androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/notificationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/notification_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/notificationDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/notification_description"
                android:textStyle="bold"
                android:textColor="@color/disable_color"
                android:textSize="12sp"
                android:layout_marginLeft="80dp"/>
            <TextView
                android:id="@+id/notificationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_date"
                android:textSize="10sp"
                android:fontFamily="@font/inter"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="-10dp"/>

            <TextView
                android:id="@+id/notificationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_time"
                android:fontFamily="@font/inter"
                android:textSize="10sp"
                android:textColor="@color/disable_color"
                android:layout_marginLeft="300dp" />
        </LinearLayout>



    </androidx.cardview.widget.CardView>


</LinearLayout>